<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_capa"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:src="@drawable/capa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="43dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@id/menu_series"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_series"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toStartOf="@id/menu_filmes"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <TextView
        android:id="@+id/menu_filmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_filmes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/menu_series"
        app:layout_constraintEnd_toStartOf="@id/menu_minha_lista"
        app:layout_constraintStart_toEndOf="@id/menu_series"
        app:layout_constraintTop_toTopOf="@id/menu_series" />

    <TextView
        android:id="@+id/menu_minha_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_minha_lista"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/menu_filmes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_filmes"
        app:layout_constraintTop_toTopOf="@id/menu_filmes" />

    <ImageView
        android:id="@+id/logo_serie"
        android:layout_width="87dp"
        android:layout_height="71dp"
        android:src="@drawable/logo_peaky"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10123119" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/txt_violencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_violencia"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/txt_empolgante"
        app:layout_constraintStart_toStartOf="@id/linha_guia_esquerda"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/txt_empolgante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_empolgante"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/txt_sinistro"
        app:layout_constraintStart_toEndOf="@id/txt_violencia"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/txt_sinistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sinistro"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/linha_guia_direita"
        app:layout_constraintStart_toEndOf="@id/txt_empolgante"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linha_guia_esquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linha_guia_direita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <Button
        android:id="@+id/btn_minha_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minha lista"
        android:drawableTop="@drawable/ic_adicionar_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/btn_assistir"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:padding="0dp" />

    <Button
        android:id="@+id/btn_assistir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assistir"
        android:drawableLeft="@drawable/ic_executar_24"
        app:layout_constraintStart_toEndOf="@id/btn_minha_lista"
        app:layout_constraintTop_toTopOf="@id/btn_minha_lista"
        app:layout_constraintBottom_toBottomOf="@id/btn_minha_lista"
        app:layout_constraintEnd_toStartOf="@id/btn_info"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info"
        android:drawableTop="@drawable/ic_informacao_24"
        app:layout_constraintTop_toTopOf="@id/btn_assistir"
        app:layout_constraintBottom_toBottomOf="@id/btn_assistir"
        app:layout_constraintStart_toEndOf="@id/btn_assistir"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/transparent"
        android:padding="0dp" />

    <TextView
        android:id="@+id/txt_lancamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lançamentos"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_minha_lista"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/img_primeira_serie"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/f1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lancamentos"
        app:layout_constraintEnd_toStartOf="@id/img_segunda_serie" />

    <ImageView
        android:id="@+id/img_segunda_serie"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/f2"
        app:layout_constraintEnd_toStartOf="@id/img_terceira_serie"
        app:layout_constraintStart_toEndOf="@id/img_primeira_serie"
        app:layout_constraintTop_toTopOf="@id/img_primeira_serie" />

    <ImageView
        android:id="@+id/img_terceira_serie"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/f3"
        app:layout_constraintStart_toEndOf="@id/img_segunda_serie"
        app:layout_constraintTop_toTopOf="@id/img_segunda_serie"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>